--- a/index_list/css/login.css
+++ b/index_list/css/login.css
@@ -1,12 +1,7 @@
-section{
-    height: 70vh;
-    width: 100%;
-}
-
 .login_div{
     width: 100%;
     height: 100%;
-    margin-top: 10%;
+    margin-top: 15%;
     display: flex;
     justify-content: center;
 }
@@ -15,19 +10,6 @@ section{
     font-size: 35px;
     font-weight: bold;
     text-align: center;
-}
-
-.btn_home_forgetpwd{
-    font-size: 14px;
-    margin-top: 10px;
-    float: left;
-}
-
-.btn_home_rememberme{
-    float: left;
-    font-size: 14px;
-    margin-top: 12px;
-    margin-left: 150px;
 }
 
 .login_btn{
@@ -52,40 +34,8 @@ section{
     margin-bottom: 1%;
 }
 
-.member_login_btn{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
-.btn_login,.btn_register{
-    border: none;
-    border-radius: 5px;
-    padding: 5px 15px;
-    font-size: 18px;
-    width: 45%;
-}
-
-.btn_login{
-    background-color: #8b1309;
-    color: #fff;
-}
-
-.btn_login:hover{
-    background-color: #a30f01;
-}
-
-.btn_register{
-    background-color: #403C3C;
-    color: #fff;
-}
-
-.btn_register:hover{
-    background-color: #524d4d;
-}
-
 .member_success{
-    margin-top: 10%;
+    margin-top: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,9 +43,16 @@ section{
 
 .member_success_div{
     text-align: center;
-    width: 20%;
+    border-radius: 5px;
+    width: 50%;
     border: 1px solid #403C3C;
     padding: 6% 1%;
+}
+
+.footer_page {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 /* RWD start */
@@ -104,20 +61,36 @@ section{
 /* 超大型螢幕 */
 
 @media screen and (max-width:1200px) {
-
+    .member_success{
+        margin-top: 21%;
+    }
+    .member_success_div{
+        padding: 7% 2%;
+    }
 }
 
 
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
+    .member_success{
+        margin-top: 23%;
+    }
+    .member_success_div{
+        padding: 10% 5%;
+    }
 }
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
-
+    .member_success{
+        margin-top: 20%;
+    }
+    .member_success_div{
+        padding: 20% 2%;
+    }
 }
 
 
@@ -128,21 +101,31 @@ section{
        width: 100%;
        margin-left: 0;
    }
-    .member_login_btn{
-        flex-wrap: wrap;
-    }
-    .btn_login,.btn_register{
+    .btn_login{
         width: 100%;
         margin-top: 5%;
     }
-
+    #success_section{
+        height: 84%;
+    }
+    .member_success{
+        margin-top: 30%;
+    }
+    .member_success_div{
+        padding: 22% 6%;
+    }
 }
 
 
 /* 小手機 */
 
 @media screen and (max-width:480px) {
-   
+    .member_success{
+        margin-top: 30%;
+    }
+    .member_success_div{
+        padding: 22% 2%;
+    }
 }
 
 
