--- a/index_list/css/member_login.css
+++ b/index_list/css/member_login.css
@@ -98,3 +98,44 @@
 }
 
 /* ---------- footer_page over ---------- */
+
+/* RWD start */
+
+
+/* 超大型螢幕 */
+
+@media screen and (max-width:1200px) {
+
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    .member_login_container{
+        border: none;
+    }
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+   
+}
+
+
+/* RWD end */
