--- a/index_list/css/progress.css
+++ b/index_list/css/progress.css
@@ -3,7 +3,7 @@
 
 .progress_container {
     width: 100%;
-    margin: 0 0 5px 0 ;
+    margin: 0 20px;
 }
 
 .progress_ul li {
@@ -49,7 +49,7 @@
     /* color: #fcc106; */
     font-size: 23px;
     font-style: italic;
-    font-weight: 800;
+    font-weight: 600;
 }
 
 .progress_ul li.active:before {
@@ -60,3 +60,115 @@
     background-color: #fcc106;
     height: 2.5px;
 }
+
+
+
+
+/* RWD start */
+
+
+/* 超大型螢幕 */
+
+@media screen and (max-width:1200px) {
+    .progress_container {
+        margin: 0 auto;
+    }
+    .progress_ul li {
+        font-size: 24px;
+    }
+    .progress_ul li:before {
+        width: 36px;
+        height: 36px;
+        margin: 0 auto;
+        border: 4px solid #707070;
+        
+    }
+    .progress_ul li:after {
+        height: 1px;
+        background-color: #707070;
+        top: 18px;
+    }
+    .progress_ul li.active {
+        font-size: 26px;
+        font-weight: bold;
+    }
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+    .progress_ul li {
+        font-size: 22px;
+    }
+    .progress_ul li:before {
+        width: 32px;
+        height: 32px;
+    }
+    .progress_ul li:after {
+        top: 14px;
+    }
+    .progress_ul li.active {
+        font-size: 24px;
+    }
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    .progress_ul li {
+        font-size: 20px;
+    }
+    .progress_ul li:before {
+        width: 28px;
+        height: 28px;
+    }
+    .progress_ul li:after {
+        top: 10px;
+    }
+    .progress_ul li.active {
+        font-size: 22px;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    .progress_ul li {
+        font-size: 18px;
+    }
+    .progress_ul li:before {
+        width: 24px;
+        height: 24px;
+    }
+    .progress_ul li:after {
+        top: 10px;
+    }
+    .progress_ul li.active {
+        font-size: 20px;
+    }
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+    .progress_ul li {
+        font-size: 16px;
+    }
+    .progress_ul li:before {
+        width: 20px;
+        height: 20px;
+    }
+    .progress_ul li:after {
+        top: 9px;
+    }
+    .progress_ul li.active {
+        font-size: 18px;
+    }
+}
+
+
+/* RWD end */
