--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -5,6 +5,7 @@
     height: 75px;
     width: 100%;
     background-color: #403C3C;
+    position: sticky;
 }
 
 #menu_group{
@@ -25,6 +26,11 @@
     transition: 0.3s;
 }
 .menu_group_list:hover{
+    background-color: #8B1309;
+    color: white;
+}
+
+.menu_group_list:active{
     background-color: #8B1309;
     color: white;
 }
