--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -61,16 +61,17 @@ div.food_list_border{
 div.food_list_border2{
     margin-left: 0vw;
 }
-
+.food_dollar_qty{
+    padding-top: 1.5rem;
+}
 .food_name{
-    font-size: 16pt;
+    font-size: 1.2rem;
 }
 .food_detail{
     flex-wrap: nowrap;
     list-style-type: none; 
     margin-left: 20%;
 }
-
 .dollar{
     margin-right: 5%;
     font-size: 12pt;
@@ -286,7 +287,7 @@ tbody td:nth-child(5) {
 
 /* 平板 */
 
-@media screen and (max-width:980px) {
+@media screen and (max-width:1000px) {
         .menu_group_list{
             width: 15vw;
             font-size: 11pt;
