--- a/index_list/css/restaurant_booking_history.css
+++ b/index_list/css/restaurant_booking_history.css
@@ -1,13 +1,13 @@
 aside {
     background-color: #403C3C;
     width: 230px;
-    height: 85vh;
+    height: 100%;
     position: fixed;
-    top: 12%;
+    float: left;
+    z-index: 4;
 }
 
-.panel-default{
-    /* border: 1px solid red; */
+.panel-default {
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
@@ -26,7 +26,6 @@ aside {
 }
 
 .little_title {
-    /* border: 1px solid red; */
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
@@ -51,10 +50,6 @@ aside {
     margin-bottom: -6px;
 }
 
-.container{
-    height: 83vh;
-}
-
 .container .order_table {
     position: absolute;
     top: 100px;
@@ -62,74 +57,71 @@ aside {
     width: 80%;
 }
 
-.member_info{
-    
+.member_info {
     margin-top: 60px;
 }
 
-.member_contain{
+.member_contain {
     padding-top: 20px;
 }
 
-.member_edit_btn{
+.member_edit_btn {
     margin-left: 200px;
     border-radius: 5px;
     margin-top: 30px;
     font-family: Noto Sans TC;
 }
 
-.title_member_edit{
+.title_member_edit {
     font-size: 35px;
     font-weight: bold;
     text-align: center;
     font-family: Noto Sans TC;
 }
 
-.edit_info{
+.edit_info {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,30%);
+    transform: translate(-50%, 30%);
 }
 
-
-
-label{
+label {
     margin-right: 20px;
 }
 
-.member_confirm_btn{
+.member_confirm_btn {
     margin-left: 150px;
     border-radius: 5px;
     margin-top: 30px;
     font-family: Noto Sans TC;
 }
 
-th{
+th {
     text-align: center;
     position: relative;
     left: 30px;
     letter-spacing: 5px;
 }
 
-td{
+td {
     text-align: center;
 }
 
-.cancel_btn{
+.cancel_btn {
     border-radius: 8px;
 }
 
-.detail_btn{
+.detail_btn {
     border: 1px solid gray;
     border-radius: 8px;
 }
 
-.comment_btn{
+.comment_btn {
     border-radius: 8px;
 }
 
-.cancel_modal_body{
+.cancel_modal_body {
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
@@ -137,13 +129,12 @@ td{
     font-family: Noto Sans TC;
 }
 
-.modal-title{
+.modal-title {
     font-family: Noto Sans TC;
     font-size: 24px;
-    
-    
 }
-.detail_modal_body{
+
+.detail_modal_body {
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 150px;
@@ -151,7 +142,7 @@ td{
     font-family: Noto Sans TC;
 }
 
-.rank_modal_body{
+.rank_modal_body {
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
@@ -159,32 +150,43 @@ td{
     font-family: Noto Sans TC;
 }
 
-.modal-footer{
+.modal-footer {
     font-family: Noto Sans TC;
 }
 
-.rank_modal_title{
+.rank_modal_title {
     position: absolute;
     font-size: 28px;
     left: -50px;
     top: -40px;
-
 }
+
 .ratings {
     position: relative;
     vertical-align: middle;
     display: inline-block;
-    color: #ddd; /*背景星星顏色*/
+    color: #ddd;
+    /*背景星星顏色*/
     overflow: hidden;
-    font-size: 40px; /*調整字體大小可放大縮小星星*/
+    font-size: 40px;
+    /*調整字體大小可放大縮小星星*/
     text-shadow: 0px 1px 0 #999;
-    }
+}
+
 .full_star {
-    width: 100%; /*調整寬度可變更星等*/
+    width: 100%;
+    /*調整寬度可變更星等*/
     position: absolute;
     left: 0;
     top: 0;
     white-space: nowrap;
     overflow: hidden;
-    color: orange; /*前景星星顏色*/
+    color: orange;
+    /*前景星星顏色*/
+}
+
+.footer_page {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
