--- a/index_list/css/restaurant_page.css
+++ b/index_list/css/restaurant_page.css
@@ -13,41 +13,54 @@
     margin-top: 10px;
 }
 
-#order,
-#take_away
+.order_btn{
+    border-radius: 5px 0 0 5px;
+}
+
+.take_away_btn{
+    border-radius: 0 5px 5px 0;
+}
+
+.order_btn,
+.take_away_btn
 {
+    width: 50%;
+    height: 50px;
     font-size: 24px;
     font-weight: bolder;
     color: #fff;
-    background-color: #313030;
+    background-color: #403C3C;
     transition: 0.3s;
 }
 
-#order:hover,
-#take_away:hover
+.order_btn:hover,
+.take_away_btn:hover
 {
-    background-color: #524d4d;
+    /* background-color: #524d4d; */
+    background-color: #FCC106;
+    color: #403C3C;
 }
 
 #carousel {
     width: 100%;
-    height: 300px;
 }
 
 .carousel-inner {
-    width: 480px;
-    height: 300px;
+    width: 100%;
+    background-color: #403C3C;
+    border-radius: 5px;
 }
 
 .carousel-item {
-    width: 480px;
-    height: 300px;
-    float: left;
+    width: 100%;
+    height: 500px;
+    
 }
 
-.carousel-item > img {
+.carousel-item  img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .list-group {
@@ -72,7 +85,7 @@
     padding-left: 20px;
     border: 1px solid grey;
     border-radius: 3px;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 .service:hover,
