--- a/index_list/css/restaurant_booking_history.css
+++ b/index_list/css/restaurant_booking_history.css
@@ -1,4 +1,10 @@
-aside {
+/* 側邊攔 start */
+#aside_menu_chk{
+    opacity: 0;
+    z-index: -1;
+}
+
+.aside_menu {
     background-color: #403C3C;
     width: 230px;
     height: 100%;
@@ -7,14 +13,25 @@ aside {
     z-index: 4;
 }
 
+.mobile_aside_menu{
+    display: none;
+}
+
+.default {
+    background-color: #8b1309;
+}
+
 .panel-default {
     border-bottom: 1px solid white;
-    padding: 5px;
     width: 100%;
 }
 
+.panel-heading:hover{
+    background-color: #8B1309;
+}
+
 .panel-title {
-    padding-top: 8px;
+    padding: 15px;
 }
 
 .panel-heading .panel-title a {
@@ -26,9 +43,8 @@ aside {
 }
 
 .little_title {
-    margin-left: -5px;
-    margin-right: -6px;
-    padding: 5px 0 5px 15px;
+    padding: 5px 0 5px 10px;
+    transition: 0.3s;
 }
 
 .little_title:hover {
@@ -38,99 +54,34 @@ aside {
 .panel .little_title a {
     text-decoration: none;
     color: white;
-    font-weight: 600;
 }
 
 .sreach_form {
-    /* border: 1px solid red; */
-    padding: 0 10px 5px 10px;
+    margin-left: 40px;
 }
 
-.form_textbox {
-    margin-bottom: -6px;
+/* 側邊欄 end */
+
+#mobile_booking_history{
+    display: none;
 }
 
-.container .order_table {
-    position: absolute;
-    top: 100px;
-    left: 16%;
+#booking_history{
     width: 80%;
+    margin-left: 20%;
 }
 
-.member_info {
-    margin-top: 60px;
-}
-
-.member_contain {
-    padding-top: 20px;
-}
-
-.member_edit_btn {
-    margin-left: 200px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-family: Noto Sans TC;
-}
-
-.title_member_edit {
-    font-size: 35px;
-    font-weight: bold;
+table th ,td{
     text-align: center;
-    font-family: Noto Sans TC;
-}
-
-.edit_info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 30%);
-}
-
-label {
-    margin-right: 20px;
-}
-
-.member_confirm_btn {
-    margin-left: 150px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-family: Noto Sans TC;
-}
-
-th {
-    text-align: center;
-    position: relative;
-    left: 30px;
-    letter-spacing: 5px;
-}
-
-td {
-    text-align: center;
-}
-
-.cancel_btn {
-    border-radius: 8px;
 }
 
 .detail_btn {
-    border: 1px solid gray;
-    border-radius: 8px;
-}
-
-.comment_btn {
-    border-radius: 8px;
-}
-
-.cancel_modal_body {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    text-align: center;
-    font-size: 28px;
-    font-family: Noto Sans TC;
+    border: 1px solid #403C3C;
+    border-radius: 5px;
+    height: 35px;
 }
 
 .modal-title {
-    font-family: Noto Sans TC;
     font-size: 24px;
 }
 
@@ -139,7 +90,6 @@ td {
     margin-bottom: 50px;
     margin-left: 150px;
     font-size: 18px;
-    font-family: Noto Sans TC;
 }
 
 .rank_modal_body {
@@ -147,11 +97,6 @@ td {
     margin-top: 100px;
     margin-bottom: 100px;
     margin-left: 150px;
-    font-family: Noto Sans TC;
-}
-
-.modal-footer {
-    font-family: Noto Sans TC;
 }
 
 .rank_modal_title {
@@ -161,32 +106,105 @@ td {
     top: -40px;
 }
 
-.ratings {
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    color: #ddd;
-    /*背景星星顏色*/
-    overflow: hidden;
-    font-size: 40px;
-    /*調整字體大小可放大縮小星星*/
-    text-shadow: 0px 1px 0 #999;
-}
-
-.full_star {
-    width: 100%;
-    /*調整寬度可變更星等*/
-    position: absolute;
-    left: 0;
-    top: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    color: orange;
-    /*前景星星顏色*/
-}
-
 .footer_page {
     position: fixed;
     bottom: 0;
     width: 100%;
 }
+
+/* RWD start */
+
+
+/* 超大型螢幕 */
+
+@media screen and (max-width:1200px) {
+    .aside_menu{
+        display: none;
+    }
+    #aside_menu_chk:checked + .mobile_aside_menu{
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + .mobile_aside_menu .fa-angle-right{
+        transform: scaleX(-1);
+    }
+    .mobile_aside_menu {
+        display: unset;
+        background-color: #403C3C;
+        width: 230px;
+        height: 100vh;
+        position: absolute;
+        float: left;
+        left: 0; 
+        position: fixed;
+        transform: translateX(-99%);
+        z-index: 2;
+        transition: 0.6s;
+    }
+    .mobile_aside_menu label{
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
+    }
+    #booking_history{
+        width: 100%;
+        margin-left: 0%;
+    }
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    #booking_history{
+        display: none;
+    }
+    #mobile_booking_history{
+        all: unset;
+    }
+    .mobile_inline_booking_history{
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+    }
+    .mobile_div{
+        display: flex;
+        justify-content: space-around;
+    }
+    .mobile_inline_div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #mobile_booking_history .mobile_inline_booking_history:last-child{
+        margin-bottom: 100px;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+
+}
+
+
+/* RWD end */
