--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -174,6 +174,28 @@ div.food_list_border2{
     
 }
 
+/* 置頂紐 */
+#btn_back_to_top {     
+    width: 60px;     
+    height: 60px;     
+    border: none;     
+    border-radius: 50%;     
+    color: #fff;     
+    font-size: 1.75rem;     
+    background-color: #403C3C;     
+    /* box-shadow: inset -3px -3px 5px 0 black;      */
+    position: fixed;     
+    bottom: 50px;     
+    left: 40%;     
+    transition: 0.1s;    
+    margin-top: 20px;     
+    margin-left: 50%; 
+    }  
+
+#btn_back_to_top:hover {     
+    background-color: grey;     
+    /* box-shadow: inset -3px -3px 5px 0 rgb(66, 66, 66);  */
+}
 
 /*已開啟揪團 start*/
 thead th:nth-child(1),
