--- a/index_list/css/restaurant_booking_history.css
+++ b/index_list/css/restaurant_booking_history.css
@@ -68,7 +68,7 @@
 
 #booking_history{
     width: 80%;
-    margin-left: 20%;
+    margin-left: 18%;
 }
 
 table th ,td{
@@ -174,9 +174,12 @@ table th ,td{
     }
     .mobile_inline_booking_history{
         border: 1px solid #ccc;
+        padding: 20px 0 0 0;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
+        margin-bottom: 20px;
     }
     .mobile_div{
         display: flex;
