--- a/index_list/css/index.css
+++ b/index_list/css/index.css
@@ -265,28 +265,23 @@
 
 .kind_div h3 {
     padding: 50px;
+    font-size: 42px;
+    font-weight: 500;
     text-align: center;
 }
 
 .water_fall {
     width: 100%;
-    column-count: 3;
+    column-count: 4;
 }
 
 .kind_span {
-    /* width: 45%;
-    float: left;
-    height: 45%; */
     margin-right: 5%;
     margin-top: 5%;
 }
 
-.kind_span span:hover {
-    color: #999999;
-}
-
 .index_img {
-    width: 90%;
+    width: 100%;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
@@ -305,10 +300,17 @@
     transform: scale(1.2, 1.2);
 }
 
+.water_fall .kind_span:nth-child(1),.water_fall .kind_span:nth-child(2){
+    margin-bottom: 10px;
+}
+
+.kind_span span:hover {
+    color: #999999;
+}
+
 .kind_span span {
-    text-decoration: none;
     position: absolute;
-    left: 22.5%;
+    left: 20%;
     top: 40%;
     font-size: 55px;
     z-index: 1;
