--- a/index_list/css/restaurant_login.css
+++ b/index_list/css/restaurant_login.css
@@ -1,126 +1,112 @@
-.container {
-    /* border: 1px solid black; */
-    padding-top: 100px;
-    width: 60%;
-    height: 81vh;
-}
-
-.card-head {
-    text-align: center;
-}
-
-.card-body{
-    text-align: center;
-}
-
-#backstage_title {
-    font-size: 36px;
-}
-
-#text_account {
-    letter-spacing: 20px;
-    margin-right: -30px;
-}
-
-.remember_psw {
-    /* border: 1px solid red; */
-    font-size: 13px; 
+.restaurant_login_container {
+    width: 440px;
+    height: 60vh;
+    margin: 120px auto;
+    padding: 10px 10px;
     display: flex;
-    justify-content: center; 
-    align-items: center; 
-    padding: 0 20px 0 120px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid #707070;
+    border-radius: 5px;
 }
 
-.remember_psw a {
-    color: black;
-    margin-right: -100px;
+.restaurant_login_title {
+    font-size: 28px;
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
 }
 
-.login_btn_2 {
-    color: white;
+.form-group {
+    margin: 10px 0;
+    padding: 10px 0;
+}
+
+.form-group > input {
+    width: 300px;
+    height: 40px;
+    justify-content: center;
+}
+
+.btn_member_login {
     background-color: #8b1309;
-    font-size: 20px;
-    width: 150px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
     border: none;
     border-radius: 5px;
-    padding: 10px 0 10px 0;
     transition: 0.3s;
 }
 
-.login_btn_2:hover{
+.btn_member_login:hover {
     background-color: #a30f01;
 }
 
-/* RWD */
+.form-group .span_container {
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#remember_password {
+    width: 20px;
+    height: 20px;
+}
+
+/* ---------- body over ---------- */
+
+
+
+/* ---------- footer_page start ---------- */
+
+.footer_page {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/* ---------- footer_page over ---------- */
+
+/* RWD start */
+
 
 /* 超大型螢幕 */
 
 @media screen and (max-width:1200px) {
-    header a img {
-        width: 90%;
-        height: 75px;
-    }
-    .nav_icon a {
-        font-size: 19px;
-        margin-right: 10px;
-    }
 
-    .footer_link {
-        justify-content: center;
-    }
 }
 
 
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
-    header a img {
-        width: 80%;
-        height: 70px;
-    }
-    .nav_icon a {
-        font-size: 18px;
-        margin-right: 10px;
-    }
-    
 }
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
-    header a img {
-        width: 70%;
-        height: 60px;
-    }
-    .nav_icon a {
-        /* font-size: 16px;
-        margin-right: 10px; */
-        display: none;
-    }
-    .rwd_icon {
-        display: block;
-    }
-    .footer_text {
-        line-height: 40px;
-        height: 50px;
-        font-size: 14px;
-    }
-    .footer_link {
-        font-size: 14px;
-    }
+
 }
 
 
 /* 手機 */
 
 @media screen and (max-width:576px) {
-    header a img {
-        width: 70%;
-        height: 50px;
+    .restaurant_login_container{
+        border: none;
     }
-    /* .nav_icon a {
-        font-size: 14px;
-        margin-left: 0px;
-    } */
 }
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+   
+}
+
+
+/* RWD end */
