--- a/index_list/css/restaurant_login_index.css
+++ b/index_list/css/restaurant_login_index.css
@@ -1,41 +1,29 @@
-.container {
-    /* border: 1px solid black; */
-    padding-top: 100px;
-    width: 60%;
-    height: 85vh;
+#restaurant_login_index{
+    width: 100%;
 }
-
+.restaurant_div{
+    width: 100%;
+    margin-top: 10%;
+}
 .restaurant_name {
-    /* border: 1px solid red; */
-    margin: -60px 0 50px -150px;
+    margin: 20px 0;
 }
 
 .restaurant_management {
-    /* border: 1px solid blue; */
-    width: 350px;
-    float: left;
-    margin-right: 280px;
-    margin-left: 30px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .restaurant_detail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 350px;
-    height: 330px;
+    height: 350px;
     background-color: #403C3C;
+    border-radius: 5px;
     color: white;
-    text-align: center;
     margin-bottom: 10px;
-}
-
-.restaurant_detail h2 {
-    font-weight: 600;
-    line-height: 300px;
-}
-
-.div3 {
-    /* border: 1px solid green; */
-    width: 350px;
-    float: left;
 }
 
 .restaurant_name h3{
@@ -46,66 +34,52 @@
     font-weight: 600;
 }
 
-.div3 h3 {
-    font-weight: 600;
+.footer_page {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 /* RWD */
 
 /* 超大型螢幕 */
 
 @media screen and (max-width:1200px) {
-    header a img {
-        width: 90%;
-        height: 75px;
-    }
-    .nav_icon a {
-        font-size: 19px;
-        margin-right: 10px;
-    }
 
-    .footer_link {
-        justify-content: center;
-    }
 }
 
 
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
-    header a img {
-        width: 80%;
-        height: 70px;
+    .restaurant_detail {
+        width: 300px;
+        height: 300px;
     }
-    .nav_icon a {
-        font-size: 18px;
-        margin-right: 10px;
-    }
-    
 }
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
-    header a img {
-        width: 70%;
-        height: 60px;
+    .restaurant_management {
+        flex-direction: row;
+        flex-wrap: wrap;
     }
-    .nav_icon a {
-        /* font-size: 16px;
-        margin-right: 10px; */
-        display: none;
+    
+    .restaurant_detail {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        /* align-items: center;
+        justify-content: center; */
+        width: 350px;
+        height: 350px;
+        background-color: #403C3C;
+        color: white;
+        margin-bottom: 10px;
     }
-    .rwd_icon {
-        display: block;
-    }
-    .footer_text {
-        line-height: 40px;
-        height: 50px;
-        font-size: 14px;
-    }
-    .footer_link {
-        font-size: 14px;
+    .restaurant_order:last-child{
+        margin-bottom: 100px;
     }
 }
 
