--- a/my-app/src/style/css/member.css
+++ b/my-app/src/style/css/member.css
@@ -66,17 +66,21 @@
     text-align: center;
 }
 
-#member_section{
-    margin-top: 100px;
-    width: 80%;
-    /* height: 100%; */
-    margin-left: 20%;
+#member_section,#edit_member{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    width: 100%;
 }
 
 .member_div{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #ccc;
+    border-radius: 5px;
+    padding: 20px 0;
+    width: 40%;
 }
 
 .edit_info {
@@ -109,12 +113,15 @@ label {
 }
 
 .btn_div {
-    margin-left: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .member_confirm_btn {
     border-radius: 5px;
     margin-top: 30px;
+    margin-left: 40px;
     width: 150px;
     height: 40px;
     color: #fff;
@@ -145,11 +152,6 @@ label {
     background-color: #4b4747;
 }
 
-.default_container {
-    width: 100%;
-    /* height: 85vh; */
-}
-
 .table_container{
     width: 100%;
 }
@@ -162,11 +164,15 @@ label {
     align-items: center;
     width: 80%;
     height: 100%;
-    margin-left: 20%;
+    margin-left: 18%;
 }
 
 #mobile_booking_manage,#mobile_order_manage{
     display: none;
+}
+
+#booking_manage .table th{
+    border-bottom: 1px solid #403c3c;
 }
 
 .table th,
@@ -228,7 +234,7 @@ td {
     align-items: center;
     width: 80%;
     height: 100%;
-    margin-left: 20%;
+    margin-left: 18%;
 }
 
 .cancel_modal_body {
@@ -364,9 +370,6 @@ td {
         width: 100%;
         margin-left: 0%;
     }
-    #member_section{
-        margin-left: 10%;
-    }
 }
 
 
@@ -433,6 +436,9 @@ td {
     #mobile_order_manage .mobile_btn_div{
         margin-top: 5%;
     }
+    #mobile_booking_manage .mobile_order_inline_div:last-child{
+        margin-bottom: 100px;
+    }
 }
 
 
@@ -494,7 +500,7 @@ td {
         margin-left: 20%;
     }
     #edit_member .edit_chk-paswrd{
-        width: 300px;
+        width: 500px;
     }
     .edit_label{
         width: 80%;
