--- a/index_list/css/booking_finish_page.css
+++ b/index_list/css/booking_finish_page.css
@@ -9,9 +9,15 @@
 
 /* ---------- body start ---------- */
 
+
+.breadcrumb .breadcrumb-item a,.active{
+    font-size: 18px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
 .finish_container {
     width: 880px;
-    height: 60vh;
     background-color: #b5b4b477;
     display: flex;
     justify-content: center;
@@ -68,15 +74,11 @@
     font-size: 18px;
     font-weight: 500;
     color: #fff;
-    background-color: #8b1309;
+    background-color: #313030;
     margin: 0 10px;
 }
 
-.finish_btn_booking_manage,
-.finish_btn_back_to_index
-{
-    background-color: #313030;
-}
+
 
 /* ---------- body over ---------- */
 
