--- a/index_list/css/restaurant_page.css
+++ b/index_list/css/restaurant_page.css
@@ -7,48 +7,62 @@
     box-sizing: border-box;
 }
 
+
 /* ---------- body start ---------- */
 
-.btn {
-    margin-top: 10px;
+.btn_container {
+    width: 100%;
+    display: flex;
+    margin: 10px;
 }
 
-.order_btn{
-    border-radius: 5px 0 0 5px;
-}
-
-.take_away_btn{
-    border-radius: 0 5px 5px 0;
+.btn_container > button > a {
+    text-decoration: none;
+    color: #fcc106;
 }
 
 .order_btn,
 .take_away_btn
 {
-    width: 50%;
-    height: 50px;
-    font-size: 24px;
-    font-weight: bolder;
-    color: #fff;
-    background-color: #403C3C;
+    width: 100%;
+    height: 60px;
+    font-size: 32px;
+    font-weight: 900;
+    background-color: #8b1038;
+    border: none;
     transition: 0.3s;
+}
+
+.order_btn {
+    border-radius: 10px 0 0 10px;
+}
+
+.take_away_btn {
+    border-radius: 0 10px 10px 0;
 }
 
 .order_btn:hover,
 .take_away_btn:hover
 {
-    /* background-color: #524d4d; */
-    background-color: #FCC106;
-    color: #403C3C;
+    background-color: #b6194d;
+    font-size: 38px;
+}
+
+.breadcrumb .breadcrumb-item a,.active{
+    font-size: 18px;
+    font-weight: bolder;
+    text-decoration: none;
 }
 
 #carousel {
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .carousel-inner {
     width: 100%;
     background-color: #403C3C;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .carousel-item {
@@ -63,6 +77,160 @@
     object-fit: cover;
 }
 
+
+.top_flex {
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+    flex-wrap: wrap;
+}
+
+.flex1 {
+    flex: 1;
+}
+
+.flex4 {
+    flex: 4;
+}
+
+.top_flex > input {
+    height: 36px;
+    background-color: #8b1038;
+    color: #fcc106;
+    border: none;
+    box-shadow: 3px 3px 3px 0 #403C3C;
+    border-radius: 5px;
+    margin-right: 5px;
+    text-align: center;
+    font-size: large;
+    font-weight:900;
+}
+
+.top_flex > input:hover {
+    background-color: #b6194d;
+    font-size: larger;
+    box-shadow: inset 3px 3px 6px 0 #403C3C;
+}
+
+.shop_item {
+    width: 72px;
+}
+
+div.flex1 {
+    margin-left: 50px;
+}
+
+.shop_wrapper > a {
+    text-decoration: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.shop_title {
+    margin: 10px 0;
+    font-weight: 600;
+    position: relative;
+    flex: 1;
+    font-size: 1.4rem;
+}
+
+.shop_rate_wrapper {
+    width: 120px;
+    height: 16px;
+    position: relative;
+    margin-right: 10px;
+    overflow: visible;
+    color: rgba( 0, 0, 0, .25);
+}
+
+.shop_rate_wrapper i {
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    /* display: block; */
+    /* position: absolute; */
+    overflow: visible;
+}
+
+.fa-star {
+    content: "\e906";
+    font-weight: 900;
+}
+
+.fa-comment-alt .fa-heart .fa-map-marked-alt .fa-bars {
+    margin-right: 4px;
+    font-weight: 400;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.service_box {
+    position: relative;
+    overflow: hidden;
+}
+
+.service_box .service_div div {
+    /* border: 1px solid red; */
+    width: 170px;
+    height: 50px;
+    float: left;
+    margin: 10px;
+    text-align: justify;
+}
+
+.service_div div i {
+    width: 45px;
+    height: 45px;
+    font-size: 24px;
+    line-height: 3;
+}
+
+
+
+
+
+.shop_container,
+.comment > textarea
+{
+    width: 100%;
+    height: 200px;
+    font-size: 18px;
+    font-weight: bold;
+    /* border: 1px solid grey; */
+    border-radius: 3px;
+    margin: 20px auto;
+    /* margin-bottom: 10px; */
+}
+
+.shop_container,
+.shop_container:hover
+{
+    height: 100%;
+    margin-top: 10px;
+}
+.shop_container {
+    padding: 0 10px;
+}
+
+.shop_wrapper {
+    /* background-color: pink; */
+    margin: 10px 0;
+    /* padding: 10px 20px; */
+}
+
+.shop_wrapper > div {
+    /* border: 1px solid black; */
+    margin: 5px auto;
+    padding-left: 5px;
+}
+
+.comment_wrapper {
+    margin-left: -500px;
+}
+
 .list-group {
     margin: 20px 0;
 }
@@ -73,8 +241,6 @@
     border: 1px solid grey;
 }
 
-.service,
-.menu,
 .comment > textarea
 {
     width: 100%;
@@ -88,8 +254,6 @@
     margin-bottom: 10px;
 }
 
-.service:hover,
-.menu:hover,
 .comment > textarea:hover
 {
     border: 3px solid gray;
