--- a/food-crossroads/src/css/index.css
+++ b/food-crossroads/src/css/index.css
@@ -195,9 +195,6 @@
 .chk_div {
     background-color: #FCC106;
     margin-top: -8px;
-    /* position: absolute;
-    top: 180px;
-    left: 34.4%; */
     z-index: 1;
     width: 600px;
     border-radius: 0 0 5px 5px;
@@ -262,32 +259,28 @@
 .kind_div {
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 5%;
 }
 
 .kind_div h3 {
     padding: 50px;
+    font-size: 42px;
+    font-weight: 500;
     text-align: center;
 }
 
 .water_fall {
     width: 100%;
-    column-count: 3;
+    column-count: 4;
 }
 
 .kind_span {
-    /* width: 45%;
-    float: left;
-    height: 45%; */
     margin-right: 5%;
-    margin-top: 5%;
-}
-
-.kind_span span:hover {
-    color: #999999;
+    margin-bottom: 5%;
 }
 
 .index_img {
-    width: 90%;
+    width: 100%;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
@@ -306,10 +299,13 @@
     transform: scale(1.2, 1.2);
 }
 
+.kind_span span:hover {
+    color: #999999;
+}
+
 .kind_span span {
-    text-decoration: none;
     position: absolute;
-    left: 22.5%;
+    left: 10%;
     top: 40%;
     font-size: 55px;
     z-index: 1;
