--- a/index_list/css/orderdisplay.css
+++ b/index_list/css/orderdisplay.css
@@ -120,6 +120,13 @@ tbody td:nth-child(5) {
   display: none;
 }
 
+.footer_page {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
+
 
 
 @media screen and (max-width:768px) {
@@ -156,6 +163,14 @@ tbody td:nth-child(5) {
   }
 
 
+  }
+
+  @media screen and (max-width:576px) {
+
+    .footer_page {
+        position: static;
+        margin-top: 20px;
+    }
   }
 
 
