--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -1,5 +1,4 @@
-.container {
-    /* border: 1px solid black; */
+#member_register .container {
     margin-top: 10px;
     padding: 50px;
 } 
@@ -54,12 +53,6 @@
 
 .register_btn:hover{
     background-color: #a30f01;
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 
 /* RWD */
