--- a/food-crossroads/src/css/restaurant_booking_history.css
+++ b/food-crossroads/src/css/restaurant_booking_history.css
@@ -7,6 +7,7 @@ aside {
 }
 
 .panel-default{
+    /* border: 1px solid red; */
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
@@ -25,6 +26,7 @@ aside {
 }
 
 .little_title {
+    /* border: 1px solid red; */
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
@@ -41,6 +43,7 @@ aside {
 }
 
 .sreach_form {
+    /* border: 1px solid red; */
     padding: 0 10px 5px 10px;
 }
 
@@ -79,6 +82,7 @@ aside {
     font-size: 35px;
     font-weight: bold;
     text-align: center;
+    font-family: Noto Sans TC;
 }
 
 .edit_info{
@@ -90,7 +94,7 @@ aside {
 
 
 
-.aside_menu label,.mobile_aside_menu label{
+label{
     margin-right: 20px;
 }
 
@@ -98,6 +102,7 @@ aside {
     margin-left: 150px;
     border-radius: 5px;
     margin-top: 30px;
+    font-family: Noto Sans TC;
 }
 
 th{
