--- a/food-crossroads/src/css/restaurant_self_pick_up.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up.css
@@ -7,6 +7,7 @@ aside {
 }
 
 .panel-default{
+    /* border: 1px solid red; */
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
@@ -42,6 +43,7 @@ aside {
 }
 
 .sreach_form {
+    /* border: 1px solid red; */
     padding: 0 10px 5px 10px;
 }
 
@@ -61,6 +63,7 @@ aside {
 }
 
 .member_info{
+    
     margin-top: 60px;
 }
 
@@ -72,12 +75,14 @@ aside {
     margin-left: 200px;
     border-radius: 5px;
     margin-top: 30px;
+    font-family: Noto Sans TC;
 }
 
 .title_member_edit{
     font-size: 35px;
     font-weight: bold;
     text-align: center;
+    font-family: Noto Sans TC;
 }
 
 .edit_info{
@@ -87,7 +92,7 @@ aside {
     transform: translate(-50%,30%);
 }
 
-aside label{
+label{
     margin-right: 20px;
 }
 
@@ -95,6 +100,7 @@ aside label{
     margin-left: 150px;
     border-radius: 5px;
     margin-top: 30px;
+    font-family: Noto Sans TC;
 }
 
 th{
