--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -1,4 +1,5 @@
-#member_register .container {
+.container {
+    /* border: 1px solid black; */
     margin-top: 10px;
     padding: 50px;
 } 
@@ -53,6 +54,12 @@
 
 .register_btn:hover{
     background-color: #a30f01;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 /* RWD */
