--- a/food-crossroads/src/css/style.css
+++ b/food-crossroads/src/css/style.css
@@ -77,16 +77,13 @@ nav .nav_a {
 
 /* 頁尾 start */
 
-.footer_page {
+footer {
     z-index: 6;
     background-color: #403C3C;
     color: white;
-    /* bottom: 0;
-    left: 0;
-    position: sticky; */
-    position: fixed;
     bottom: 0;
-    width: 100%;
+    left: 0;
+    position: sticky;
 }
 
 .footer_text {
